the final edite

--- a/style.css
+++ b/style.css
@@ -27,9 +27,8 @@ body {
 }
 
 .countries {
-  /* margin-bottom: 8rem; */
+  margin-bottom: 8rem;
   display: flex;
-
   font-size: 2rem;
   opacity: 0;
   transition: opacity 1s;
@@ -41,7 +40,7 @@ body {
   font-size: 1.8rem;
   width: 30rem;
   border-radius: 0.7rem;
-  margin: 0 3rem;
+  margin: 0 0.2rem;
   /* overflow: hidden; */
 }
 
@@ -104,7 +103,7 @@ body {
   padding: 2rem 5rem;
   border-radius: 0.7rem;
   color: white;
-  background-color: orangered;
+  background-color: blueviolet;
   cursor: pointer;
 }
 
